force-app/main/default/objects/Witness__c/Witness__c.object-meta.xml
<CustomObject>
    <label>Witness</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Witnesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>