force-app/main/default/objects/Witness__c/fields/EEODetail__c.field-meta.xml
<CustomField>
    <fullName>EEODetail__c</fullName>
    <label>EEO Detail</label>
    <referenceTo>EEO_Detail__c</referenceTo>
    <relationshipLabel>Witnesses</relationshipLabel>
    <relationshipName>EEODetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>