force-app/main/default/objects/Witness__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Witnesses</relationshipLabel>
    <relationshipName>Witnesses</relationshipName>
    <type>Lookup</type>
</CustomField>