force-app/main/default/objects/Witness__c/fields/Witness_Number__c.field-meta.xml
<CustomField>
    <fullName>Witness_Number__c</fullName>
    <displayFormat>W-{000000}</displayFormat>
    <label>Witness Number</label>
    <type>AutoNumber</type>
</CustomField>